--- a/Test_QUA/AAAAAAA.qsf
+++ b/Test_QUA/AAAAAAA.qsf
@@ -42,25 +42,7 @@ set_global_assignment -name DEVICE 10M50DAF484C6GES
 set_global_assignment -name TOP_LEVEL_ENTITY top
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 15.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "17:45:13 JUNE 17,2016"
-set_global_assignment -name LAST_QUARTUS_VERSION "16.1.0 Lite Edition"
-set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/unite.vhd"
-set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/ual.vhd"
-set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/top.vhd"
-set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/regfile.vhd"
-set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/pcplus4.vhd"
-set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/pc.vhd"
-set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/mux3.vhd"
-set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/mux2.vhd"
-set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/mips.vhd"
-set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/imem.vhd"
-set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/dmem.vhd"
-set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/datapath.vhd"
-set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/control.vhd"
-set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/Bloc5.vhd"
-set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/Bloc4.vhd"
-set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/Bloc3.vhd"
-set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/Bloc2.vhd"
-set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/Bloc1.vhd"
+set_global_assignment -name LAST_QUARTUS_VERSION "23.1std.0 Lite Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name DEVICE_FILTER_PACKAGE FBGA
 set_global_assignment -name DEVICE_FILTER_PIN_COUNT 484
@@ -250,7 +232,6 @@ set_location_assignment PIN_AB3 -to GPIO[32]
 set_location_assignment PIN_Y3 -to GPIO[33]
 set_location_assignment PIN_AB2 -to GPIO[34]
 set_location_assignment PIN_AA2 -to GPIO[35]
-set_global_assignment -name VERILOG_FILE DE10_LITE_Golden_Top.v
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
@@ -263,9 +244,6 @@ set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_symbol
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_signal_integrity
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_boundary_scan
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ADC_CLK_10
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to MAX10_CLK1_50
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to MAX10_CLK2_50
@@ -451,4 +429,29 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to GPIO[32]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to GPIO[33]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to GPIO[34]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to GPIO[35]
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/bascule_1_bit.vhd"
+set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/bascule.vhd"
+set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/unite.vhd"
+set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/ual.vhd"
+set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/top.vhd"
+set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/regfile.vhd"
+set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/pcplus4.vhd"
+set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/pc.vhd"
+set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/mux3.vhd"
+set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/mux2.vhd"
+set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/mips.vhd"
+set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/imem.vhd"
+set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/dmem.vhd"
+set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/datapath.vhd"
+set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/control.vhd"
+set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/Bloc5.vhd"
+set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/Bloc4.vhd"
+set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/Bloc3.vhd"
+set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/Bloc2.vhd"
+set_global_assignment -name VHDL_FILE "../Model SIM SIMULATE/Bloc1.vhd"
+set_global_assignment -name VERILOG_FILE DE10_LITE_Golden_Top.v
+set_global_assignment -name BDF_FILE AAAAAAA.bdf
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
